banner section done

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -15,6 +15,10 @@
 }
 .banner-title{
   font-size: 1.90rem;
+  line-height:  35px;
+}
+.banner-img {
+  margin-left: 0; 
 }
 .btn-primary{
   padding: 10px 30px;
