--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -14,7 +14,7 @@
   flex-direction: column;
 }
 .banner-title{
-  font-size: 1.90rem;
+  font-size: 1.9rem;
   line-height:  35px;
 }
 .banner-img {
@@ -28,7 +28,24 @@
   margin-right: -300px;
   padding: 10px 30px;
 }
-
+.rectangle-1 {
+  width: 160px;
+  height: 70px;
+  bottom: 530px;
+  left: 236px;
+}
+.rectangle-1-description {
+  letter-spacing: 0px;
+}
+.rectangle-2{
+  width: 170px;
+  height: 68px;
+  bottom: 303px;
+  right: 222px;
+}
+.rectangle-2-description {
+  font-size: 0.9rem;
+}
 /* feature section */
 .feature-types, .team-person{
   grid-template-columns: repeat(1,1fr);
